# Judge

./: CMakeLists.txt
executable/: brute.cpp
include/compiler/: Compiler.h
include/runner/: ProccesRunner.h
include/tester/: Tester.h
src/: Compiler.cpp  ProcessRunner.cpp  main.cpp
src/runner/: ProcessRunner.cpp
stress/: temp.txt
temp/: main.cpp  test.cpp
